[gd_scene load_steps=2 format=3 uid="uid://ubr2khrxjhvr"]

[ext_resource type="Script" path="res://Own/Scripts/Enviroment/night_timer.gd" id="1_b7uba"]

[node name="NightTimer" type="Node2D"]
script = ExtResource("1_b7uba")

[node name="NightTimeSetter" type="Timer" parent="."]

[node name="DayTimeSetter" type="Timer" parent="."]

[connection signal="timeout" from="NightTimeSetter" to="." method="_on_night_time_setter_timeout"]
[connection signal="timeout" from="DayTimeSetter" to="." method="_on_day_time_setter_timeout"]
